<resources>
    <string name="app_name">ABC Jobs</string>
    <string name="nav_name">ABC Jobs</string>
    <string name="app_home_label">Welcome to </string>
    <string name="app_home_label_abc">ABC </string>
    <string name="app_home_label_jobs">JOBS </string>
    <string name="album_label">Album:</string>
    <string name="artist_label">Artista:</string>
    <string name="date_label">Fecha de lanzamiento:</string>
    <string name="genre_label">Género:</string>
    <string name="record_label">Compañia Discografica:</string>
    <string name="description_label">Descripción:</string>
    <string name="artist_name_label">Artista:</string>
    <string name="artist_date_label">Fecha:</string>
    <string name="artist_albums_label">Albumes:</string>
    <string name="artist_prizes_label">Premios:</string>
    <string name="detail_album_description_image">Imagen del detalle del album</string>
    <string name="detail_artist_description_image">Imagen del detalle del artista</string>
    <string name="item_layout_description_image">Imagen del artista,album o coleccionista</string>
    <string name="menu_aspirant_label">Aspirants</string>
    <string name="menu_project_label">Projects</string>
    <string name="menu_interview_label">Interviews</string>
    <string name="logo">Logo</string>
    <string name="collector">Coleccionistas</string>
    <string name="login">Login</string>
    <string name="loginWithGooge">Google Login</string>
    <string name="NeedAnAccount">¿Need an account?</string>
    <string name="AlreadyRegister">¿Already Registered?</string>
    <string name="SignUp">Create User</string>
    <string name="SaveInformation">Save Information</string>
    <string name="SignUpCompany">Create Company</string>
    <string name="SignUpInLogin">SignUp</string>
    <string name="collector_label">Coleccionista:</string>
    <string name="favorite_performers">Interpretes favoritos:</string>
    <string name="comments">Comentarios:</string>
    <string name="add_album_btn">Crear un nuevo album</string>
    <string name="sub_menu_album_options">Agregar Canción</string>
    <string name="form_name_song">Nombre Canción</string>
    <string name="form_song_min">min</string>
    <string name="form_song_seg">seg</string>
    <string name="add_song">Agregar Canción</string>
    <string name="label_create_album_instruction">Completa todos los campos</string>
    <string name="form_add_name_album">Nombre Album</string>
    <string name="form_add_name_url_cover">URL cover imágen</string>
    <string name="form_add_genero_album">Genero</string>
    <string name="form_add_record_album">Record Label</string>
    <string name="form_add_description_album">Descripción</string>
    <string name="form_add_date_album">Fecha creación (dd/mm/yyyy)</string>
    <string name="add_album">Crear Album</string>
    <string name="tracks_label">Canciones:</string>
    <string name="username">Username</string>
    <string name="company">Company</string>
    <string name="information_type">Education Type</string>
    <string name="skill">Skills</string>
    <string name="candidate_name">Name</string>
    <string name="candidate_last_name">Last Name</string>
    <string name="candidate_document_type">Document Type</string>
    <string name="candidate_document">Document</string>
    <string name="gender">Gender</string>
    <string name="email">Email</string>
    <string name="position">Position</string>
    <string name="level">Level Education</string>
    <string name="level_skill">Skills Level</string>
    <string name="actual_job">Actual Job</string>
    <string name="title">Title</string>
    <string name="experience">Experience</string>
    <string name="start_date">Start Date (DD/MM/AAAA)</string>
    <string name="interview_date">Interview Date (DD/MM/AAAA HH:MM)</string>
    <string name="test_date">Evaluation Date (DD/MM/AAAA HH:MM)</string>
    <string name="grade">Grade</string>
    <string name="end_date">End Date (DD/MM/AAAA)</string>
    <string name="institution">Institution</string>
    <string name="alternative_email">Alternative Email</string>
    <string name="telephone">Telephone Number</string>
    <string name="country">Country</string>
    <string name="address">Address</string>
    <string name="description">Description</string>
    <string name="photo">Photo</string>
    <string name="birthday">Birthday (DD/MM/AAAA)</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string-array name="list_generos">
        <item>Classical</item>
        <item>Folk</item>
        <item>Rock</item>
        <item>Salsa</item>
    </string-array>
    <string-array name="list_records">
        <item>Sony Music</item>
        <item>EMI</item>
        <item>Discos Fuentes</item>
        <item>Elektra</item>
        <item>Fania Records</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>