<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/base_sign_up"
    tools:context="com.example.vinilos.ui.main.view.RegisterPersonalInformationActivity">

    <RelativeLayout
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000"
        android:clickable="true"
        android:elevation="100dp"
        android:focusable="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_centerInParent="true"
            android:elevation="100dp"
            android:indeterminate="true" />

    </RelativeLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="356dp"
        app:cardCornerRadius="0dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/black"
        app:strokeWidth="0.5dp">

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/userNameTil"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/userNameEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/candidate_name"
                        android:inputType="text"
                        android:paddingHorizontal="8dp"
                        android:paddingVertical="12dp"
                        android:textColorHint="#757575"
                        tools:ignore="TouchTargetSizeCheck" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/lastNameTil"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/lastNameEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/candidate_last_name"
                        android:inputType="text"
                        android:paddingHorizontal="8dp"
                        android:paddingVertical="12dp"
                        android:textColorHint="#757575"
                        tools:ignore="TouchTargetSizeCheck" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/documentTypeTil"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/documentTypeEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/candidate_document_type"
                        android:inputType="text"
                        android:paddingHorizontal="8dp"
                        android:paddingVertical="12dp"
                        android:textColorHint="#757575"
                        tools:ignore="TouchTargetSizeCheck" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/documentTil"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/documentEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/candidate_document"
                        android:inputType="text"
                        android:paddingHorizontal="8dp"
                        android:paddingVertical="12dp"
                        android:textColorHint="#757575"
                        tools:ignore="TouchTargetSizeCheck" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/genderTil"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/genderEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/gender"
                        android:inputType="text"
                        android:paddingHorizontal="8dp"
                        android:paddingVertical="12dp"
                        android:textColorHint="#757575"
                        tools:ignore="TouchTargetSizeCheck" />
                </com.google.android.material.textfield.TextInputLayout>

                <!--com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailAddressTil"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/emailAddressEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/alternative_email"
                        android:inputType="textEmailAddress"
                        android:paddingHorizontal="8dp"
                        android:paddingVertical="12dp"
                        tools:ignore="TouchTargetSizeCheck" />

                </com.google.android.material.textfield.TextInputLayout-->

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/telephoneTil"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/telephoneEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/telephone"
                        android:inputType="textEmailAddress"
                        android:paddingHorizontal="8dp"
                        android:paddingVertical="12dp"
                        tools:ignore="TouchTargetSizeCheck" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/countryTil"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/countryEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/country"
                        android:inputType="textEmailAddress"
                        android:paddingHorizontal="8dp"
                        android:paddingVertical="12dp"
                        tools:ignore="TouchTargetSizeCheck" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/addressTil"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/addressEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/address"
                        android:inputType="textEmailAddress"
                        android:paddingHorizontal="8dp"
                        android:paddingVertical="12dp"
                        tools:ignore="TouchTargetSizeCheck" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/birthDateTil"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/birthDateEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/birthday"
                        android:inputType="textEmailAddress"
                        android:paddingHorizontal="8dp"
                        android:paddingVertical="12dp"
                        tools:ignore="TouchTargetSizeCheck" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/descriptionTil"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/descriptionEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/description"
                        android:inputType="textEmailAddress"
                        android:paddingHorizontal="8dp"
                        android:paddingVertical="12dp"
                        tools:ignore="TouchTargetSizeCheck" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/photoTil"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/photoEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/photo"
                        android:inputType="textEmailAddress"
                        android:paddingHorizontal="8dp"
                        android:paddingVertical="12dp"
                        tools:ignore="TouchTargetSizeCheck" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/saveInformationBtn"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:text="@string/SaveInformation"
                    app:cornerRadius="30dp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/space"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />


            </LinearLayout>
        </ScrollView>


    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>